objects/BMCServiceDesk__BMC_Cluster__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ClusterType__c</fullName>
        <label>Cluster Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoftwareServerCluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ApplicationInstanceCluster</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InterconnectAddress__c</fullName>
        <label>Interconnect Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Interconnect__c</fullName>
        <label>Interconnect</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfNodes__c</fullName>
        <label>Maximum Number Of Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Types__c</fullName>
        <label>Types</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>